# tinymesh

./: .gitignore  .gitmodules  CMakeLists.txt  PARALLELIZATION_ANALYSIS.md  README.md
base-outputs/: bunny_copy.ply  bunny_denoise_Gaussian.ply  bunny_denoise_bilateral.ply  bunny_denoise_l0.ply  bunny_fill_adv_front.ply  bunny_implicit_fair.ply  bunny_laplace_smooth.ply  bunny_simplify.ply  christmas_bear_simplify.ply
data/: .gitignore
data/models/: bunny_denoise_Gaussian.ply  bunny_denoise_bilateral.ply  bunny_denoise_l0.ply  bunny_fill_minDA.ply  bunny_noise.ply  bunny_remesh.ply  bunny_simplify.ply  bunny_taubin_smooth.ply  christmas_bear_simplify.ply
scripts/: run_with_allocator.sh
src/tinymesh/: CMakeLists.txt
src/tinymesh/core/: bvh.cpp  completion.cpp  face.cpp  halfedge.h  mesh.cpp  utils.h  vec.h  vertex.cpp
src/tinymesh/filters/: denoise.cpp  smooth.cpp
src/tinymesh/remesh/: remesh.cpp  simplify.cpp
src/tinymesh/restore/: completion.cpp
